<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".RegisterFragment">

    <TextView android:text="Register New User" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_title_text_view"
        android:textSize="35dp" />


    <EditText
        android:id="@+id/register_user_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Name"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        android:layout_marginTop="46dp" />


    <EditText
        android:id="@+id/register_password1_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColorHint="#ffff299f"
        android:hint="Password" />

    <EditText
        android:id="@+id/register_password2_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColorHint="#ffff299f"
        android:hint="Confirm Password" />

    <Button
        android:id="@+id/register_button_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:onClick="addUser"/>

    <Button
        android:id="@+id/register_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        />


</LinearLayout>