<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/login_fragment"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginFragment"
    android:gravity="center">

    <TextView android:text="Login" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_title_text_view"
        android:textSize="35dp"
        android:paddingBottom="100px" />



    <EditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Name"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#ffff25e6"
        android:gravity="center"/>

    <EditText
        android:id="@+id/pass_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColorHint="#ffff299f"
        android:hint="Password"
        android:gravity="center"/>


    <!--    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Attempts Left:"
            android:id="@+id/attempts_text_view_1"
            android:textSize="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:id="@+id/attempts_text_view_2"
            android:textSize="25dp" />

-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="login"
            android:id="@+id/login_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/register_button_initial" />


    <!--<com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/button"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3" />
-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/share_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share this app"/>

</LinearLayout>
